# project-elijah

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pico-2-debug.cfg  pico-debug.cfg
airbrakes/: airbrake_controls.cpp  airbrake_controls.h  airbrakes_flight_phase_controller.cpp  airbrakes_flight_phase_controller.h  airbrakes_sensors.cpp  airbrakes_sensors.h  airbrakes_state_manager.h  core1.cpp  core1.h  main.cpp  pin_outs.cpp  pin_outs.h  sensors.cpp  sensors.h  test_data.h
airbrakes/reliable_sensors/bmp_280/: airbrakes_reliable_bmp_280.cpp  airbrakes_reliable_bmp_280.h
airbrakes/reliable_sensors/mpu_6050/: airbrakes_reliable_mpu_6050.cpp  airbrakes_reliable_mpu_6050.h
lib/: pico_extras_import.cmake
override/: core1.cpp  core1.h  main.cpp  override_flight_phase_controller.cpp  override_flight_phase_controller.h  override_sensors.cpp  override_sensors.h  override_state_manager.h  pin_outs.cpp  pin_outs.h  sd_hw_config.c  sensors.cpp  sensors.h
override/reliable_sensors/bmp_280/: override_reliable_bmp_280.cpp  override_reliable_bmp_280.h
override/reliable_sensors/mpu_6050/: override_reliable_mpu_6050.cpp  override_reliable_mpu_6050.h
payload/: aprs.cpp  aprs.h  byte_util.cpp  core1.cpp  core1.h  core_1.cpp  core_1.h  main.cpp  main.h  payload_flight_phase_controller.cpp  payload_flight_phase_controller.h  payload_sensors.cpp  payload_sensors.h  payload_state_manager.h  pin_outs.cpp  pin_outs.h  sd_hw_config.c  sensors.cpp  sensors.h  status_manager.cpp  status_manager.h
payload/pio/: aprs_controller.pio
payload/reliable_clock/: reliable_clock.h
payload/reliable_sensors/bmp_280/: payload_reliable_bmp_280.cpp  payload_reliable_bmp_280.h
payload/reliable_sensors/mpu_6050/: payload_reliable_mpu_6050.cpp  payload_reliable_mpu_6050.h
payload/reliable_sensors/reliable_clock/: reliable_clock.cpp  reliable_clock.h
payload/sensors/battery/: battery.cpp  battery.h
payload/sensors/ds_1307/: ds_1307.cpp  ds_1307.h
payload/sensors/mpu_6050/: mpu_6050.cpp  mpu_6050.h
payload/sensors/onboard_clock/: onboard_clock.cpp  onboard_clock.h
payload/storage/w25q64fv/: flash_sim.cpp  w25q64fv.cpp  w25q64fv.h
shared/battery/: CMakeLists.txt
shared/battery/include/: battery.h  liperior_battery.h  ovonic_battery.h
shared/battery/src/: battery.cpp  liperior_battery.cpp  ovonic_battery.cpp
shared/bmp_280/: CMakeLists.txt
shared/bmp_280/include/: bmp_280.h  reliable_bmp_280.h
shared/bmp_280/src/: bmp_280.cpp
shared/elijah_state_framework/: CMakeLists.txt
shared/elijah_state_framework/include/: communication_channel.h  data_type.h  elijah_state_framework.h  enum_type.h  fault_definition.h  fault_manager.h  flight_phase_controller.h  log_level.h  metadata_segment.h  output_packet.h  persistent_data_entry.h  persistent_data_storage.h  registered_command.h  reliable_component_helper.h  speaker_controller.h  state_framework_logger.h  usb_comm.h  variable_definition.h
shared/elijah_state_framework/src/: registered_command.cpp  speaker_controller.cpp  state_framework_logger.cpp  usb_comm.cpp  variable_definition.cpp
shared/i2c_util/: CMakeLists.txt
shared/i2c_util/include/: i2c_util.h
shared/i2c_util/src/: i2c_util.cpp
shared/mpu_6050/: CMakeLists.txt
shared/mpu_6050/include/: mpu_6050.h  reliable_mpu_6050.h
shared/mpu_6050/src/: mpu_6050.cpp
shared/shared_mutex/: CMakeLists.txt
shared/shared_mutex/include/: shared_mutex.h
shared/shared_mutex/src/: shared_mutex.c
shared/standard_flight_phase_controller/: CMakeLists.txt
shared/standard_flight_phase_controller/include/: standard_flight_phase_controller.h
shared/standard_helpers/: CMakeLists.txt
shared/standard_helpers/include/: standard_command_helpers.h  standard_flight_phase_controller.h  test_data.h  test_data_new.h
src/: aprs.cpp  bmp_180.cpp  bmp_180.h  byte_util.cpp  byte_util.h  core_1.cpp  core_1.h  cs_lock_num.h  i2c_util.cpp  i2c_util.h  lock_nums.h  main.cpp  main.h  pin_outs.h  sd_hw_config.c  status_manager.cpp  status_manager.h  usb_communication.cpp  usb_communication.h
src/pio/: status_led_controller.pio
src/sensors/battery/: battery.cpp  battery.h
src/sensors/bmp_180/: bmp_180.cpp  bmp_180.h
src/sensors/bmp_280/: bmp_280.cpp  bmp_280.h
src/sensors/ds_1307/: ds_1307.cpp  ds_1307.h
src/sensors/hmc_5883l/: hmc_5883l.cpp  hmc_5883l.h
src/sensors/i2c/: i2c_util.cpp  i2c_util.h
src/sensors/mpu_6050/: mpu_6050.cpp  mpu_6050.h
src/sensors/onboard_clock/: onboard_clock.cpp
src/storage/: payload_data_manager.cpp  payload_data_manager.h  w25q64fv.cpp  w25q64fv.h
src/storage/payload_data_manager/: payload_data_manager.cpp  payload_data_manager.h
src/storage/w25q64fv/: flash_sim.cpp  w25q64fv.cpp  w25q64fv.h
state-framework-com/: README.md  __main__.py  device.py  home_view.py  read.py  requirements.txt  serial_helper.py
state-framework-com/display/: color_manager.py  screen_loop.py  screen_state.py
state-framework-com/display/widgets/: color_block.py  faults_widget.py  header_widget.py  line_segments.py  list_widget.py  log_widget.py  widget.py
state-framework-com/framework/: data_type.py  fault_definition.py  framework_metadata.py  log_message.py  persistent_data_entry.py  registered_command.py  serial_helper.py  state_framework.py  time_helper.py  variable_definition.py
state-framework-com/framework/readable/: readable.py  readable_file.py  readable_serial.py
